[gd_scene load_steps=43 format=2]

[ext_resource path="res://assets/graphics/backgrounds/level.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/mario/mario_idle.png" type="Texture" id=2]
[ext_resource path="res://assets/scripts/controlador_mario.gd" type="Script" id=3]
[ext_resource path="res://assets/graphics/mario/mario_walk_1.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/mario/mario_stair_2.png" type="Texture" id=5]
[ext_resource path="res://assets/graphics/mario/mario_stair_1.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/mario/mario_walk_2.png" type="Texture" id=7]
[ext_resource path="res://assets/graphics/kong/kong_angry_1.png" type="Texture" id=8]
[ext_resource path="res://assets/graphics/peach/peach_2.png" type="Texture" id=9]
[ext_resource path="res://assets/graphics/peach/peach_1.png" type="Texture" id=10]
[ext_resource path="res://assets/graphics/kong/kong_angry_2.png" type="Texture" id=11]
[ext_resource path="res://assets/graphics/kong/kong_take_barrel_2.png" type="Texture" id=12]
[ext_resource path="res://assets/graphics/kong/kong_idle.png" type="Texture" id=13]
[ext_resource path="res://assets/graphics/kong/kong_take_barrel_1.png" type="Texture" id=14]
[ext_resource path="res://assets/graphics/misc/help.png" type="Texture" id=15]
[ext_resource path="res://assets/scripts/peach_controller.gd" type="Script" id=16]
[ext_resource path="res://assets/scripts/kong_controller.gd" type="Script" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60, 4 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 139, -12 )
b = Vector2( -33, -6 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( -1, 2 )
b = Vector2( 207, 11 )

[sub_resource type="SegmentShape2D" id=10]
b = Vector2( 176, -7 )

[sub_resource type="SegmentShape2D" id=11]
a = Vector2( -6, 5 )
b = Vector2( 186, 13 )

[sub_resource type="SegmentShape2D" id=12]
b = Vector2( 185, -7 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 56, 4 )

[sub_resource type="SegmentShape2D" id=14]
a = Vector2( -14, -1 )
b = Vector2( 55, 2 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 20, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 4.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4, 6.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 4, 3.5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 4, 6.5 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 4, 5.5 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 4.00001, 3.5 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 4, 5 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 4, 7.5 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 4.0
height = 8.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "stairs",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4.5, 7 )

[sub_resource type="RayShape2D" id=23]
length = 8.0

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 12 ) ],
"loop": false,
"name": "cogiendo_barril",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 11 ) ],
"loop": true,
"name": "enfadado",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 20, 16 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 8, 10 )

[node name="Juego" type="Node2D"]

[node name="Nivel" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Plataformas" type="StaticBody2D" parent="Nivel"]
collision_layer = 2
collision_mask = 5
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nivel/Plataformas"]
position = Vector2( 76, 220 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Nivel/Plataformas"]
position = Vector2( 118, 224 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Nivel/Plataformas"]
position = Vector2( 25, 179 )
shape = SubResource( 7 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Nivel/Plataformas"]
position = Vector2( 40, 160 )
shape = SubResource( 10 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Nivel/Plataformas"]
position = Vector2( 14, 116 )
shape = SubResource( 11 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Nivel/Plataformas"]
position = Vector2( 32, 100 )
shape = SubResource( 12 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Nivel/Plataformas"]
position = Vector2( 80, 68 )
shape = SubResource( 13 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Nivel/Plataformas"]
position = Vector2( 137, 67 )
shape = SubResource( 14 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Nivel/Plataformas"]
position = Vector2( 132, 44 )
shape = SubResource( 24 )

[node name="Escaleras" type="Area2D" parent="Nivel"]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nivel/Escaleras"]
position = Vector2( 212, 193.5 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Nivel/Escaleras"]
position = Vector2( 124, 162.5 )
shape = SubResource( 8 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Nivel/Escaleras"]
position = Vector2( 60, 162.5 )
shape = SubResource( 9 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Nivel/Escaleras"]
position = Vector2( 140, 132.5 )
shape = SubResource( 15 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Nivel/Escaleras"]
position = Vector2( 100, 102.5 )
shape = SubResource( 16 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Nivel/Escaleras"]
position = Vector2( 52, 102.5 )
shape = SubResource( 17 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Nivel/Escaleras"]
position = Vector2( 180, 73 )
shape = SubResource( 18 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Nivel/Escaleras"]
position = Vector2( 148, 47.5 )
shape = SubResource( 25 )

[node name="Mario" type="RigidBody2D" parent="."]
position = Vector2( 65, 208 )
collision_layer = 0
collision_mask = 2
mode = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mario"]
shape = SubResource( 5 )

[node name="Animaciones" type="AnimatedSprite" parent="Mario"]
frames = SubResource( 4 )
animation = "idle"

[node name="Pies" type="RayCast2D" parent="Mario"]
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="Cuerpo" type="Area2D" parent="Mario"]
collision_layer = 0
collision_mask = 14

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Mario/Cuerpo"]
position = Vector2( -0.5, 1 )
shape = SubResource( 6 )

[node name="DetectScore" type="Area2D" parent="Mario"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mario/DetectScore"]
position = Vector2( 0, 8 )
shape = SubResource( 23 )

[node name="Kong" type="Area2D" parent="."]
position = Vector2( 60, 48 )
script = ExtResource( 17 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Kong"]
frames = SubResource( 19 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kong"]
shape = SubResource( 20 )

[node name="Timer" type="Timer" parent="Kong"]
one_shot = true

[node name="Peach" type="Area2D" parent="."]
position = Vector2( 123, 29 )
collision_layer = 9
script = ExtResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Peach"]
frames = SubResource( 21 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Peach"]
shape = SubResource( 22 )

[node name="Timer" type="Timer" parent="Peach"]
autostart = true

[node name="Sprite" type="Sprite" parent="Peach"]
visible = false
position = Vector2( 17, -13 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 15 )

[connection signal="area_entered" from="Mario/Cuerpo" to="Mario" method="_on_Cuerpo_area_entered"]
[connection signal="area_exited" from="Mario/Cuerpo" to="Mario" method="_on_Cuerpo_area_exited"]
[connection signal="body_entered" from="Mario/Cuerpo" to="Mario" method="_on_Cuerpo_body_entered"]
[connection signal="body_entered" from="Mario/DetectScore" to="Mario" method="_on_DetectScore_body_entered"]
[connection signal="animation_finished" from="Kong/AnimatedSprite" to="Kong" method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Kong/Timer" to="Kong" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="Peach/AnimatedSprite" to="Peach" method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Peach/Timer" to="Peach" method="_on_Timer_timeout"]
